<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PhoneInfoMainActivity!</string>
    <string name="app_name">PhoneInfo</string>
    <string name="tab_general">General</string>
    <string name="tab_task">Task</string>
    <string name="tab_gpu">GPU</string>
    <string name="tab_hardware">Hardware</string>
    <string name="tab_about">About</string>
	<string name="detail_process_name">detail_process_name</string>
	<string name="kill_process">Kill Process</string>
	<string name="detail_process_copyright">Copyright</string>
	<string name="detail_process_install_dir">Install dir</string>
	<string name="detail_process_data_dir">Data dir</string>
	<string name="detail_process_package_size">Package size</string>
	<string name="detail_process_permission">Permission</string>
	<string name="detail_process_service">Service</string>
	<string name="detail_process_activity">Activity</string>
	<string name="no_use">no_use</string>
	<string name="progress_tips_title">Flush Process</string>
	<string name="progress_tips_content">Flush Processing&#8230;\nPlease Wait&#8230;</string>
	<string name="about_prompt">上面的黑色长方形左边距30dp 上边距10dp 宽度40dp 高度20dp 本行文字使用android默认size</string>
	<string name="abount_text_8sp">本行文字8sp</string>
	<string name="abount_text_10sp">本行文字10sp</string>
	<string name="abount_text_12sp">本行文字12sp</string>
	<string name="abount_text_14sp">本行文字14sp</string>
	<string name="abount_text_16sp">本行文字16sp</string>
	<string name="abount_text_18sp">本行文字18sp</string>
	<string name="abount_text_20sp">本行文字20sp</string>
	<string name="abount_text_22sp">本行文字22sp</string>
	<string name="abount_text_24sp">本行文字24sp</string>
	<string name="abount_text_26sp">本行文字26sp</string>
	<string name="abount_text_28sp">本行文字28sp</string>
	<string name="abount_text_30sp">本行文字30sp</string>
	<string name="abount_text_32sp">本行文字32sp</string>
</resources>
