<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="3dip"
        android:paddingRight="3dip"
        android:paddingTop="1dip"
        android:paddingBottom="1dip">
        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="27dip"
            android:background="#555555"
            android:id="@+id/relativeLayout1">
            <TextView android:textSize="7pt"
                android:layout_alignParentLeft="true"
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/detail_process_name"></TextView>
            <Button android:id="@+id/btn_kill_process"
                android:textSize="6pt"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingTop="0dip"
                android:paddingBottom="0dip"
                android:paddingRight="10dip"
                android:paddingLeft="10dip"
                android:layout_marginTop="2dip"
                android:textStyle="bold"
                android:text="@string/kill_process"
                android:textColor="#5555EE"></Button>
        </RelativeLayout>
        <TextView
            android:id="@+id/detail_process_name"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />

        <TextView
            android:text="@string/detail_process_copyright"
            android:textSize="7pt"
            android:layout_alignParentLeft="true"
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:gravity="center_vertical"
            android:background="#555555"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />
        <TextView
            android:id="@+id/detail_process_copyright"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />

        <TextView
            android:text="@string/detail_process_install_dir"
            android:textSize="7pt"
            android:layout_alignParentLeft="true"
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:gravity="center_vertical"
            android:background="#555555"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />
        <TextView
            android:id="@+id/detail_process_install_dir"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />

        <TextView
            android:text="@string/detail_process_data_dir"
            android:textSize="7pt"
            android:layout_alignParentLeft="true"
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:gravity="center_vertical"
            android:background="#555555"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />
        <TextView
            android:id="@+id/detail_process_data_dir"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />

        <TextView
            android:text="@string/detail_process_package_size"
            android:textSize="7pt"
            android:layout_alignParentLeft="true"
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:gravity="center_vertical"
            android:background="#555555"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />
        <TextView
            android:id="@+id/detail_process_package_size"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />

        <TextView
            android:text="@string/detail_process_permission"
            android:textSize="7pt"
            android:layout_alignParentLeft="true"
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:gravity="center_vertical"
            android:background="#555555"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />
        <TextView
            android:id="@+id/detail_process_permission"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />

        <TextView
            android:text="@string/detail_process_service"
            android:textSize="7pt"
            android:layout_alignParentLeft="true"
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:gravity="center_vertical"
            android:background="#555555"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />
        <TextView
            android:id="@+id/detail_process_service"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />

        <TextView
            android:text="@string/detail_process_activity"
            android:textSize="7pt"
            android:layout_alignParentLeft="true"
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:gravity="center_vertical"
            android:background="#555555"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />
        <TextView
            android:id="@+id/detail_process_activity"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="3dip"
            android:paddingBottom="3dip" />
    </LinearLayout>
</ScrollView>
